[project]
name = "voice-agent-crm-integrated"
version = "0.1.0"
description = ""
authors = [
    {name = "Achyuth",email = "achyuthrayal2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "websockets (==15.0.1)",
    "langgraph (>=1.2.4,<2.0.0)",
    "langchain (>=1.3.4,<2.0.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "openai (>=2.40.0,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "supabase (>=2.30.1,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "twilio (>=9.10.9,<10.0.0)",
    "tiktoken (>=0.13.0,<0.14.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "faker (>=40.21.0,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
